bug/MET-16-Code-analysis code clean up